--- a/styles/Toolbar.module.scss
+++ b/styles/Toolbar.module.scss
@@ -14,5 +14,8 @@
 
 .footer {
     text-align: center;
-    padding: 30px 0px;
+    padding: 25px 0px;
+}
+.page-container{
+    text-align: center;
 }
