--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -3,5 +3,9 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 10px;
+  margin: 15px 0px 25px 0px;
+}
+
+.box{
+  margin-top: 15px;
 }
