--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,13 +5,15 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: url(../public/background-img.jpg) center center / cover no-repeat fixed;
 }
-
+h1,h2,h3,h4,p,div{
+color: white;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 }
@@ -20,4 +22,19 @@ a {
 }
 .box{
   margin-top: 15px;
+}
+.title {
+  margin-top: 25px;
+}
+.manga-card {
+  margin-top: 50px;
+}
+.modal-body{
+  text-align: center;
+}
+.video{
+  margin-top: 60px;
+}
+.modal-css{
+  background: black;
 }
